--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>java-springboot</name>
 	<description>Demo project for Spring Boot</description>
+	<profiles>
+		<profile>
+	  		<id>openshift</id>
+		</profile>
+	</profiles>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
